// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaterialSampleSplitGenerationForm Layout snapshot with matching material sample types. 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <nav
        class="d-flex flex-column align-items-center"
        id="wb-tphp"
      >
        <a
          class="wb-link-inv wb-sl"
          href="#wb-cont"
        >
          Skip to Main Content
        </a>
        <a
          class="wb-link-inv wb-sl"
          href="#wb-info"
        >
          Skip to "About this site"
        </a>
        <a
          class="wb-link-inv wb-sl"
          href="?wbdisable=true"
          rel="alternate"
        >
          Switch to basic HTML version
        </a>
      </nav>
      <header>
        <div
          class="centered container-fluid"
        >
          <div
            class="header-container row d-flex  row row-cols-md-2 row-cols-1"
          >
            <div
              class="col"
            >
              <img
                alt=""
                class="logo"
                property="logo"
                src="/static/images/canadaLogo_en.svg"
              />
              <span
                class="wb-inv"
                property="name"
              >
                Government of Canada / 
                <span
                  lang="fr"
                >
                  Gouvernement du Canada
                </span>
              </span>
              <meta
                content="Canada"
                property="areaServed"
                typeof="Country"
              />
            </div>
            <div
              class="text-end  col"
            >
              <ul
                class="list-inline mt-1 mb-1"
              >
                <li
                  class="list-inline-item mr-1 my-auto"
                >
                  <a
                    class="px-0 btn btn-link"
                    href="/feedback"
                    role="button"
                    tabindex="0"
                  >
                    Feedback
                  </a>
                </li>
                <li
                  class="list-inline-item px-2"
                >
                  –
                </li>
                <li
                  class="list-inline-item mr-0"
                >
                  <div
                    data-testid="languageSelector"
                  >
                    <button
                      class="px-0 btn btn-link"
                      lang="fr"
                      type="button"
                    >
                      Français
                    </button>
                  </div>
                </li>
              </ul>
              <ul
                class="list-inline"
              >
                <li
                  class="list-inline-item my-auto"
                >
                  <div
                    class="d-flex align-items-center text-end"
                  >
                    <span
                      class="me-2 my-auto h4"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 496 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"
                        />
                      </svg>
                    </span>
                    <span
                      class="me-4 my-auto h5"
                    >
                      <a
                        href="/dina-user/view?id=&hideBackButton=true"
                      >
                        test-user
                      </a>
                    </span>
                    <button
                      class="btn btn-info logout-button my-auto"
                      type="button"
                    >
                      Logout
                    </button>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <nav
          class="app-bar navbar navbar-expand-lg navbar-light"
        >
          <div
            class="centered container-fluid"
          >
            <a
              class="app-name navbar-brand"
              href="/"
            >
              DINA (developer)
            </a>
            <button
              aria-controls="basic-navbar-nav"
              aria-label="Toggle navigation"
              class="navbar-toggler collapsed"
              type="button"
            >
              <span
                class="navbar-toggler-icon"
              />
            </button>
            <div
              aria-expanded="false"
              class="navbar-collapse collapse"
              id="basic-navbar-nav"
              role="menubar"
            >
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Collection
                </a>
              </div>
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Transactions
                </a>
              </div>
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Object Store
                </a>
              </div>
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Agents
                </a>
              </div>
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Sequencing
                </a>
              </div>
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Controlled Vocabulary
                </a>
              </div>
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Configuration
                </a>
              </div>
            </div>
          </div>
        </nav>
      </header>
      <div
        class="button-bar button-bar-sticky undefined"
      >
        <div
          class="container-fluid centered"
        >
          <div
            class="d-flex row"
          >
            <div
              class="col-md-6 col-sm-12"
            >
              <div
                class="mt-2"
              >
                <a
                  class="back-button my-auto "
                  href="/collection/material-sample/view?id=a503d31d-8203-4766-af85-db271e087853"
                >
                  Back to read-only page
                </a>
              </div>
            </div>
            <div
              class="col-md-6 col-sm-12 d-flex"
            >
              <button
                class="btn ms-auto btn-primary"
                style="width: 10rem;"
                type="submit"
              >
                Split
              </button>
            </div>
          </div>
        </div>
      </div>
      <main
        class="container-fluid"
        role="main"
      >
        <h1
          id="wb-cont"
        >
          Split Material Sample
        </h1>
        <div
          class="row"
        >
          <div
            class="col-md-5"
          >
            <h4
              class="mt-2"
            >
              Settings
            </h4>
            <strong>
              Select Split Configuration
            </strong>
            <div
              class="mt-1 mb-3 css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-3-live-region"
              >
                <span
                  id="aria-selection"
                >
                  option , selected.
                </span>
                <span
                  id="aria-focused"
                />
                <span
                  id="aria-results"
                />
                <span
                  id="aria-guidance"
                >
                  Select is focused ,type to refine list, press Down to open the menu, 
                </span>
              </span>
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class=" css-t3ipsp-control"
              >
                <div
                  class=" css-1fdsijx-ValueContainer"
                >
                  <div
                    class=" css-1jqq78o-placeholder"
                    id="react-select-3-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class=" css-qbdosj-Input"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-3-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class=""
                      id="react-select-3-input"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class=" css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-15lsz6c-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="splitConfiguration"
                type="hidden"
                value=""
              />
            </div>
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <strong>
                  Split from:
                </strong>
                <ul
                  class="mb-0"
                >
                  <li>
                    CNC-1
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="mt-3"
            >
              <label
                class="numberToCreate-field mb-2 w-100 mb-3"
              >
                <div
                  class="field-label label-col mb-2"
                >
                  <strong>
                    Material Samples to Create
                  </strong>
                </div>
                <div
                  class="field-col"
                  style="cursor: auto;"
                >
                  <input
                    class="form-control"
                    max="500"
                    min="1"
                    size="4"
                    step="1"
                    type="number"
                    value="1"
                  />
                </div>
              </label>
            </div>
            <div
              class="mt-3"
            >
              <label
                class="sourceSet-field mb-2 w-100 mb-3"
              >
                <div
                  class="field-label label-col mb-2"
                >
                  <strong>
                    <div
                      class="sourceSet-field-header"
                    >
                      Source Set
                      <span
                        class="m-2"
                      >
                        <span>
                          <img
                            alt="User-defined name that can be used to retrieve all material samples that were created in the same batch."
                            aria-describedby="field_sourceSet_tooltip"
                            src="/static/images/iconInformation.gif"
                            tabindex="0"
                          />
                        </span>
                      </span>
                    </div>
                  </strong>
                </div>
                <div
                  class="field-col"
                  style="cursor: auto;"
                >
                  <div
                    class="d-flex align-items-center gap-2"
                  >
                    <input
                      class="form-control"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="col-md-7"
          >
            <div
              class="mt-2"
            >
              <h4>
                Preview
              </h4>
              <table
                class="table"
              >
                <thead>
                  <tr>
                    <th>
                      Number
                    </th>
                    <th>
                      Generated Identifier
                    </th>
                    <th>
                      Parent Material Sample
                    </th>
                    <th>
                      Material Sample Type
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
            </div>
          </div>
        </div>
      </main>
      <footer
        class="mt-3"
        id="wb-info"
        style="z-index: 0;"
      >
        <div
          class="brand"
        >
          <div
            class="container-fluid centered"
          >
            <div
              class="row "
            >
              <nav
                class="col-md-10 ftr-urlt-lnk py-3"
              >
                <ul>
                  <li>
                    <a
                      href="https://www.canada.ca/en/contact.html"
                    >
                      Contact information
                    </a>
                  </li>
                  <li>
                    <a
                      href="https://www.canada.ca/en/transparency/terms.html"
                    >
                      Terms and conditions
                    </a>
                  </li>
                  <li>
                    <a
                      href="https://www.canada.ca/en/transparency/privacy.html"
                    >
                      Privacy
                    </a>
                  </li>
                </ul>
                <div />
              </nav>
              <div
                class="col-6 col-md-3 col-lg-2 text-end pt-2"
              >
                <img
                  alt="Symbol of the Government of Canada"
                  class="mt-4"
                  src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_32/assets/wmms-blk.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </footer>
    </form>
  </div>
</DocumentFragment>
`;

exports[`MaterialSampleSplitGenerationForm Layout snapshot without matching material sample types. 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <nav
        class="d-flex flex-column align-items-center"
        id="wb-tphp"
      >
        <a
          class="wb-link-inv wb-sl"
          href="#wb-cont"
        >
          Skip to Main Content
        </a>
        <a
          class="wb-link-inv wb-sl"
          href="#wb-info"
        >
          Skip to "About this site"
        </a>
        <a
          class="wb-link-inv wb-sl"
          href="?wbdisable=true"
          rel="alternate"
        >
          Switch to basic HTML version
        </a>
      </nav>
      <header>
        <div
          class="centered container-fluid"
        >
          <div
            class="header-container row d-flex  row row-cols-md-2 row-cols-1"
          >
            <div
              class="col"
            >
              <img
                alt=""
                class="logo"
                property="logo"
                src="/static/images/canadaLogo_en.svg"
              />
              <span
                class="wb-inv"
                property="name"
              >
                Government of Canada / 
                <span
                  lang="fr"
                >
                  Gouvernement du Canada
                </span>
              </span>
              <meta
                content="Canada"
                property="areaServed"
                typeof="Country"
              />
            </div>
            <div
              class="text-end  col"
            >
              <ul
                class="list-inline mt-1 mb-1"
              >
                <li
                  class="list-inline-item mr-1 my-auto"
                >
                  <a
                    class="px-0 btn btn-link"
                    href="/feedback"
                    role="button"
                    tabindex="0"
                  >
                    Feedback
                  </a>
                </li>
                <li
                  class="list-inline-item px-2"
                >
                  –
                </li>
                <li
                  class="list-inline-item mr-0"
                >
                  <div
                    data-testid="languageSelector"
                  >
                    <button
                      class="px-0 btn btn-link"
                      lang="fr"
                      type="button"
                    >
                      Français
                    </button>
                  </div>
                </li>
              </ul>
              <ul
                class="list-inline"
              >
                <li
                  class="list-inline-item my-auto"
                >
                  <div
                    class="d-flex align-items-center text-end"
                  >
                    <span
                      class="me-2 my-auto h4"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 496 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"
                        />
                      </svg>
                    </span>
                    <span
                      class="me-4 my-auto h5"
                    >
                      <a
                        href="/dina-user/view?id=&hideBackButton=true"
                      >
                        test-user
                      </a>
                    </span>
                    <button
                      class="btn btn-info logout-button my-auto"
                      type="button"
                    >
                      Logout
                    </button>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <nav
          class="app-bar navbar navbar-expand-lg navbar-light"
        >
          <div
            class="centered container-fluid"
          >
            <a
              class="app-name navbar-brand"
              href="/"
            >
              DINA (developer)
            </a>
            <button
              aria-controls="basic-navbar-nav"
              aria-label="Toggle navigation"
              class="navbar-toggler collapsed"
              type="button"
            >
              <span
                class="navbar-toggler-icon"
              />
            </button>
            <div
              aria-expanded="false"
              class="navbar-collapse collapse"
              id="basic-navbar-nav"
              role="menubar"
            >
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Collection
                </a>
              </div>
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Transactions
                </a>
              </div>
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Object Store
                </a>
              </div>
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Agents
                </a>
              </div>
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Sequencing
                </a>
              </div>
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Controlled Vocabulary
                </a>
              </div>
              <div
                class="nav-item dropdown"
                role="menuitem"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  Configuration
                </a>
              </div>
            </div>
          </div>
        </nav>
      </header>
      <div
        class="button-bar button-bar-sticky undefined"
      >
        <div
          class="container-fluid centered"
        >
          <div
            class="d-flex row"
          >
            <div
              class="col-md-6 col-sm-12"
            >
              <div
                class="mt-2"
              >
                <a
                  class="back-button my-auto "
                  href="/collection/material-sample/view?id=a503d31d-8203-4766-af85-db271e087853"
                >
                  Back to read-only page
                </a>
              </div>
            </div>
            <div
              class="col-md-6 col-sm-12 d-flex"
            >
              <button
                class="btn ms-auto btn-primary"
                style="width: 10rem;"
                type="submit"
              >
                Split
              </button>
            </div>
          </div>
        </div>
      </div>
      <main
        class="container-fluid"
        role="main"
      >
        <h1
          id="wb-cont"
        >
          Split Material Sample
        </h1>
        <div
          class="error-viewer"
        >
          <div
            class="alert alert-danger"
            role="status"
          >
            Some Material Samples do not match the Split Configuration and were removed.
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-5"
          >
            <h4
              class="mt-2"
            >
              Settings
            </h4>
            <strong>
              Select Split Configuration
            </strong>
            <div
              class="mt-1 mb-3 css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-5-live-region"
              >
                <span
                  id="aria-selection"
                >
                  option , selected.
                </span>
                <span
                  id="aria-focused"
                />
                <span
                  id="aria-results"
                />
                <span
                  id="aria-guidance"
                >
                  Select is focused ,type to refine list, press Down to open the menu, 
                </span>
              </span>
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class=" css-t3ipsp-control"
              >
                <div
                  class=" css-1fdsijx-ValueContainer"
                >
                  <div
                    class=" css-1jqq78o-placeholder"
                    id="react-select-5-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class=" css-qbdosj-Input"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-5-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class=""
                      id="react-select-5-input"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class=" css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-15lsz6c-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="splitConfiguration"
                type="hidden"
                value=""
              />
            </div>
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <strong>
                  Split from:
                </strong>
                <ul
                  class="mb-0"
                />
              </div>
            </div>
            <div
              class="mt-3"
            >
              <label
                class="numberToCreate-field mb-2 w-100 mb-3"
              >
                <div
                  class="field-label label-col mb-2"
                >
                  <strong>
                    Material Samples to Create
                  </strong>
                </div>
                <div
                  class="field-col"
                  style="cursor: auto;"
                >
                  <input
                    class="form-control"
                    max="500"
                    min="1"
                    size="4"
                    step="1"
                    type="number"
                    value="1"
                  />
                </div>
              </label>
            </div>
            <div
              class="mt-3"
            >
              <label
                class="sourceSet-field mb-2 w-100 mb-3"
              >
                <div
                  class="field-label label-col mb-2"
                >
                  <strong>
                    <div
                      class="sourceSet-field-header"
                    >
                      Source Set
                      <span
                        class="m-2"
                      >
                        <span>
                          <img
                            alt="User-defined name that can be used to retrieve all material samples that were created in the same batch."
                            aria-describedby="field_sourceSet_tooltip"
                            src="/static/images/iconInformation.gif"
                            tabindex="0"
                          />
                        </span>
                      </span>
                    </div>
                  </strong>
                </div>
                <div
                  class="field-col"
                  style="cursor: auto;"
                >
                  <div
                    class="d-flex align-items-center gap-2"
                  >
                    <input
                      class="form-control"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="col-md-7"
          >
            <div
              class="mt-2"
            >
              <h4>
                Preview
              </h4>
              <table
                class="table"
              >
                <thead>
                  <tr>
                    <th>
                      Number
                    </th>
                    <th>
                      Generated Identifier
                    </th>
                    <th>
                      Parent Material Sample
                    </th>
                    <th>
                      Material Sample Type
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
            </div>
          </div>
        </div>
      </main>
      <footer
        class="mt-3"
        id="wb-info"
        style="z-index: 0;"
      >
        <div
          class="brand"
        >
          <div
            class="container-fluid centered"
          >
            <div
              class="row "
            >
              <nav
                class="col-md-10 ftr-urlt-lnk py-3"
              >
                <ul>
                  <li>
                    <a
                      href="https://www.canada.ca/en/contact.html"
                    >
                      Contact information
                    </a>
                  </li>
                  <li>
                    <a
                      href="https://www.canada.ca/en/transparency/terms.html"
                    >
                      Terms and conditions
                    </a>
                  </li>
                  <li>
                    <a
                      href="https://www.canada.ca/en/transparency/privacy.html"
                    >
                      Privacy
                    </a>
                  </li>
                </ul>
                <div />
              </nav>
              <div
                class="col-6 col-md-3 col-lg-2 text-end pt-2"
              >
                <img
                  alt="Symbol of the Government of Canada"
                  class="mt-4"
                  src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_32/assets/wmms-blk.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </footer>
    </form>
  </div>
</DocumentFragment>
`;
